# sentiment_analysis_nasdaq

./: .gitattributes  .gitignore  README.md  eda.ipynb  execute_notebook.py  finbert_finetuned.ipynb  finbert_finetuned.py  inference.py  inference_finbert.py  pyproject.toml  raw_dataset.py  run_ml_pipeline.py  run_notebook_cells.py  streamlit_app.py
finbert_models/final_model/: config.json  model.safetensors  model_metadata.json
models/: best_xgboost_model.json  model_metadata.json  text_cleaning.py
