[tool.poetry]
name = "dogo-sentiment"
version = "0.1.0"
description = "Financial sentiment analysis pipelines and dashboard"
authors = ["Sami"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.5.0"
torch = ">=2.2.0"
transformers = "^4.57.0"
xgboost = "^2.1.0"
optuna = "^3.6.0"
accelerate = "^1.1.0"
safetensors = "^0.4.5"
plotly = "^5.24.0"
streamlit = "^1.39.0"
pypdf = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

